first commit of asset via glycerine - DRK, scalped

--- a/ArtMumbai2025/puzzle-template.html
+++ b/ArtMumbai2025/puzzle-template.html
@@ -27,7 +27,7 @@
         function init(){
             _img = new Image();
             _img.addEventListener('load',onImage,false);
-            _img.src = "https://free.iiifhosting.com/iiif/f3f1412e34d6f46a258a5d72b276fa56ad60fb2e9f17f22022431b053f9889f1/";
+            _img.src = "https://app.glycerine.io/publications/image-sets/01k97gqw369yxsyt95jx3qe7y5";
         }
         function onImage(e){
             _pieceWidth = Math.floor(_img.width / PUZZLE_DIFFICULTY)
