embed test - via iiifhosting, of scalped

--- a/ArtMumbai2025/embed-scalped.html
+++ b/ArtMumbai2025/embed-scalped.html
@@ -1,3 +1,3 @@
-<div style="padding-bottom:96.25%; position:relative; display:block; width: 100%">
-<iframe width="100%" height="1200" src="https://free.iiifhosting.com/iiif/f3f1412e34d6f46a258a5d72b276fa56ad60fb2e9f17f22022431b053f9889f1/" frameborder="0" allowfullscreen allow="fullscreen" style="position:absolute; top:0; left: 0"></iframe>
+<div style="padding-bottom:76.25%; position:relative; display:block; width: 100%">
+<iframe width="100%" height="100%" src="https://free.iiifhosting.com/iiif/f3f1412e34d6f46a258a5d72b276fa56ad60fb2e9f17f22022431b053f9889f1/" frameborder="0" allowfullscreen allow="fullscreen" style="position:absolute; top:0; left: 0"></iframe>
 </div>
