puzzle set to local DRK file

--- a/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
+++ b/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
@@ -27,7 +27,7 @@
         function init(){
             _img = new Image();
             _img.addEventListener('load',onImage,false);
-            _img.src = "https://app.glycerine.io/publications/image-sets/01k97gqw369yxsyt95jx3qe7y5";
+            _img.src = "Dinkar-Kowshik-1989.JPG";
         }
         function onImage(e){
             _pieceWidth = Math.floor(_img.width / PUZZLE_DIFFICULTY)
