puzzle html trimmed

--- a/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
+++ b/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
@@ -2,9 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kowshik Family Collection - Art Mumbai - Puzzle Template</title>
-
-    <!-- http://gallica.bnf.fr/iiif/ark:/12148/btv1b8449043q/f67/825,1746,2372,1327/,550/0/native.jpg -->
+    <title>Kowshik Family Collection at Art Mumbai with Gallery G - Puzzle 1</title>
 	<script>
 
         const PUZZLE_DIFFICULTY = 7;
@@ -222,21 +220,7 @@
 
 <body onload="init();">
 	<canvas id="canvas"></canvas>
-	<h2>Manuscripts Image Puzzles - 06/07 (1/2)</h2>
-	<h3>About today's image</h3>
-	<p>Inspired by a delightful conference at Duke this past week, <a href="http://www.francophonedh.com/MakingMedieval.html#conference">Creating is Remembering</a>, the next set of puzzles will be drawn from French literary manuscripts of the fourteenth and fifteenth centuries. Since I fell behind on producing new puzzles while in Durham, today's offering is a two-for-one. In this first example, as Larry Earp tells us, "Fortune, blindfolded, turns a wheel with three people on it: at the top a king, on the right side a man falling off, and on the left side another man climbing up." [Earp, <em>Guillaume de Machaut: A Guide to Research</em>, p. 153].</p>
-	<p>This manuscript, BNF fr. 1586 (f. 30v), was produced in the 1350s and is one of the first deluxe presentation manuscripts that contain the collected works of French poet/composer Guillaume de Machaut. You can explore this manuscript on the Gallica site <a href="http://gallica.bnf.fr/ark:/12148/btv1b8449043q/f1.planchecontact.r=1586">here</a>.</p>
-	<p>This post was inspired by Michael Appleby's <a href="http://puzzle.mikeapps.me/">IIIF-powered puzzles</a> and uses code from Brad Manderscheid's <a href="http://code.tutsplus.com/tutorials/create-an-html5-canvas-tile-swapping-puzzle--active-10747">HTML5 tutorial</a>. All images used for these puzzles are delivered via <a href="http://iiif.io">IIIF</a></p></div>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-86525748-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-</body>
+	<h2>Puzzle 1</h2>
+	</body>
 
 </html>
