--- a/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
+++ b/Art-Mumbai-2025-with-Gallery-G/puzzle-template.html
@@ -25,7 +25,7 @@
         function init(){
             _img = new Image();
             _img.addEventListener('load',onImage,false);
-            _img.src = "Dinkar-Kowshik-1989.JPG";
+            _img.src = "Dinkar-Kowshik-1989.jpg";
         }
         function onImage(e){
             _pieceWidth = Math.floor(_img.width / PUZZLE_DIFFICULTY)
